# asana_bot

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
src/: config.py
src/db/: session.py
src/db/tables/: task.py
src/resources/: email.py
src/services/: skan.py
src/utils/: bot.py  client.py  db.py
